--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,13 +1,17 @@
+@import "./constants/colors.scss";
+
+$font-base: "DM Sans", sans-serif;
+
 .app {
-  background-color: var(--primary-color);
-  font-family: var(--font-base);
+  background-color: $primary-color;
+  font-family: $font-base;
 
   &__whitebg {
-    background-color: var(--white-color);
+    background-color: $white-color;
   }
 
   &__primarybg {
-    background-color: var(--primary-color);
+    background-color: $primary-color;
   }
 
   &__container {
@@ -47,9 +51,9 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background-color: var(--white-color);
+      background-color: $white-color;
       margin: 0.25rem 0;
-      border: 1px solid var(--lightGray-color);
+      border: 1px solid $lightGray-color;
 
       display: flex;
       justify-content: center;
@@ -60,15 +64,15 @@
       svg {
         width: 15px;
         height: 15px;
-        color: var(--gray-color);
+        color: $gray-color;
       }
 
       &:hover {
-        background-color: var(--secondary-color);
-        border-color: var(--secondary-color);
+        background-color: $secondary-color;
+        border-color: $secondary-color;
 
         svg {
-          color: var(--white-color);
+          color: $white-color;
         }
       }
 
@@ -104,7 +108,7 @@
       transition: background-color 0.2s ease-in-out;
 
       &:hover {
-        background-color: var(--secondary-color);
+        background-color: $secondary-color;
       }
 
       @media screen and (min-width: 2000px) {
@@ -126,7 +130,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: $black-color;
   }
 }
 
@@ -134,11 +138,11 @@
   font-size: 2.75rem;
   font-weight: 800;
   text-align: center;
-  color: var(--black-color);
+  color: $black-color;
   text-transform: capitalize;
 
   span {
-    color: var(--secondary-color);
+    color: $secondary-color;
   }
 
   @media screen and (min-width: 2000px) {
@@ -153,7 +157,7 @@
 .p-text {
   font-size: 0.8rem;
   text-align: left;
-  color: var(--gray-color);
+  color: $gray-color;
   line-height: 1.5;
 
   @media screen and (min-width: 2000px) {
@@ -164,7 +168,7 @@
 .bold-text {
   font-size: 1rem;
   font-weight: 800;
-  color: var(--black-color);
+  color: $black-color;
   text-align: left;
 
   @media screen and (min-width: 2000px) {
