Add shadow color variable

--- a/frontend/src/constants/colors.scss
+++ b/frontend/src/constants/colors.scss
@@ -5,3 +5,4 @@ $lightGray-color: rgb(228, 228, 228);
 $gray-color: rgb(107, 118, 136);
 $brown-color: rgb(70, 54, 74);
 $white-color: rgb(255, 255, 255);
+$shadow-color: rgb(168, 168, 168);
