--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -75,5 +75,98 @@
         }
       }
     }
+
+    @media screen and (max-width: 900px) {
+      display: none;
+    }
+  }
+
+  &-menu {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $secondary-color;
+
+    svg {
+      width: 70%;
+      height: 70%;
+      color: $white-color;
+    }
+
+    div {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 5;
+
+      padding: 1rem;
+
+      width: 80%;
+      height: 100vh;
+
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      flex-direction: column;
+
+      background: url("../../assets/bgWhite.png");
+      background-color: $white-color;
+      background-size: cover;
+      background-repeat: repeat;
+
+      box-shadow: 0 0 20px rgba($shadow-color, 0.15);
+
+      svg {
+        width: 35px;
+        height: 35px;
+        color: $secondary-color;
+        margin: 0.5rem 1rem;
+      }
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+
+        li {
+          margin: 1rem;
+
+          a {
+            color: $gray-color;
+            text-decoration: none;
+            font-size: 1rem;
+            text-transform: uppercase;
+            font-weight: 500;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+              color: $secondary-color;
+            }
+          }
+        }
+      }
+
+      @media screen and (min-width: 900px) {
+        display: none;
+      }
+    }
+
+    @media screen and (min-width: 900px) {
+      display: none;
+    }
   }
 }
