--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -97,6 +97,7 @@
       width: 70%;
       height: 70%;
       color: $white-color;
+      cursor: pointer;
     }
 
     div {
@@ -128,6 +129,7 @@
         height: 35px;
         color: $secondary-color;
         margin: 0.5rem 1rem;
+        cursor: pointer;
       }
 
       ul {
