--- a/frontend/src/constants/colors.scss
+++ b/frontend/src/constants/colors.scss
@@ -6,3 +6,4 @@ $gray-color: rgb(107, 118, 136);
 $brown-color: rgb(70, 54, 74);
 $white-color: rgb(255, 255, 255);
 $shadow-color: rgb(168, 168, 168);
+$blue-color: rgb(49, 59, 172);
