--- a/frontend/src/container/Work/Work.scss
+++ b/frontend/src/container/Work/Work.scss
@@ -1,7 +1,154 @@
+@import "../../constants/colors.scss";
+@import "../../constants/fonts.scss";
+
 .app__work {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+
+  &-filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+
+    margin: 4rem 0 2rem;
+
+    .app__work-filter-item {
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      background-color: $white-color;
+      color: $black-color;
+      font-weight: 800;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      margin: 0.5rem;
+
+      &:hover {
+        background-color: $secondary-color;
+        color: $white-color;
+      }
+
+      @media screen and (min-width: 2000px) {
+        padding: 1rem 2rem;
+        border-radius: 0.85rem;
+      }
+
+      &.item-active {
+        background: $secondary-color;
+        color: $white-color;
+      }
+    }
+  }
+
+  &-portfolio {
+    display: flex;
+    flex: wrap;
+    justify-content: center;
+    align-items: center;
+
+    .app__work-item {
+      width: 270px;
+      flex-direction: column;
+      margin: 2rem;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      background-color: $white-color;
+      color: $black-color;
+      cursor: pointer;
+      transition: all 0.3s ease;
+
+      &:hover {
+        box-shadow: 0 0 25px rgba($black-color, 0.2);
+      }
+
+      @media screen and (min-width: 2000px) {
+        width: 470px;
+        padding: 1.25rem;
+        border-radius: 0.75rem;
+      }
+
+      @media screen and (max-width: 300px) {
+        width: 100%;
+        margin: 1rem;
+      }
+    }
+  }
+
+  &-img {
+    width: 100%;
+    height: 230px;
+    position: relative;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 0.5rem;
+      object-fit: cover;
+    }
+
+    @media screen and (min-width: 2000px) {
+      height: 350px;
+    }
+  }
+
+  &-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($black-color, 0.5);
+    border-radius: 0.5rem;
+    opacity: 0;
+
+    div {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: rgba($black-color, 0.5);
+      color: $white-color;
+      margin: 1rem;
+      font-family: $font-base;
+      font-weight: 800;
+      cursor: pointer;
+
+      svg {
+        width: 50%;
+        height: 50%;
+        color: $white-color;
+      }
+    }
+  }
+
   &-content {
+    padding: 0.5rem;
+    width: 100%;
+    position: relative;
+    flex-direction: column;
+
+    h4 {
+      margin-top: 1rem;
+      line-height: 1.5;
+    }
+
     p.p-text {
       margin-top: 10px;
+    }
+
+    .app__work-tag {
+      position: absolute;
+      padding: 0.5rem 1rem;
+      border-radius: 10px;
+      background: $white-color;
+      top: -25px;
+
+      p.p-text {
+        margin-top: 0;
+      }
     }
   }
 }
