--- a/frontend/src/container/Work/Work.scss
+++ b/frontend/src/container/Work/Work.scss
@@ -74,6 +74,10 @@
         margin: 1rem;
       }
     }
+
+    @media screen and (max-width: 900px) {
+      flex-direction: column;
+    }
   }
 
   &-img {
