--- a/frontend/src/container/Skills/Skills.scss
+++ b/frontend/src/container/Skills/Skills.scss
@@ -78,4 +78,79 @@
       }
     }
   }
+
+  &-exp {
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+
+    @media screen and (max-width: 900px) {
+      margin-top: 2rem;
+    }
+
+    &-item {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin: 1rem 0;
+    }
+
+    &-works {
+      flex: 1;
+
+      .app__skills-exp-work {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-bottom: 1rem;
+        cursor: pointer;
+
+        h4 {
+          font-weight: 500;
+        }
+
+        p {
+          font-weight: 400;
+          color: $gray-color;
+          margin-top: 5px;
+        }
+      }
+    }
+
+    &-year {
+      margin-right: 3rem;
+
+      p {
+        font-weight: 800;
+        color: $secondary-color;
+      }
+
+      @media screen and (max-width: 450px) {
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+
+.skills-tooltip {
+  max-width: 300px !important;
+  background-color: $white-color !important;
+  box-shadow: 0 0 25px rgba($black-color, 0.1) !important;
+  border-radius: 5px !important;
+  padding: 1rem !important;
+  color: $gray-color !important;
+  text-align: center !important;
+  line-height: 1.5 !important;
+  opacity: 1 !important;
+
+  @media screen and (min-width: 2000px) {
+    font-size: 1.75rem !important;
+    max-width: 500px !important;
+    line-height: 2 !important;
+  }
 }
