--- a/frontend/src/container/Testimonial/Testimonial.scss
+++ b/frontend/src/container/Testimonial/Testimonial.scss
@@ -1,4 +1,112 @@
+@import "../../constants/colors.scss";
+@import "../../constants/fonts.scss";
+
 .app__testimonial {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+
+  &-item {
+    width: 60%;
+    // min-height: 320px;
+    background-color: $white-color;
+    display: flex;
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow: 0 0 30px rgba($black-color, 0.1);
+
+    transition: all 0.3s ease-in-out;
+
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 1.5rem;
+    }
+
+    @media screen and (min-width: 2000px) {
+      // min-height: 450px;
+
+      img {
+        width: 150px;
+        height: 150px;
+      }
+    }
+
+    @media screen and (max-width: 850px) {
+      width: 100%;
+    }
+
+    @media screen and (max-width: 600px) {
+      flex-direction: column;
+
+      img {
+        margin-right: 0;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+  &-content {
+    flex: 1;
+    height: 100%;
+    padding: 0 2 rem;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+
+    p {
+      font-size: 1.25rem;
+      line-height: 2rem;
+      color: $black-color;
+      font-family: $font-base;
+    }
+
+    h4 {
+      font-weight: 600;
+      color: $secondary-color;
+      margin-top: 2rem;
+    }
+
+    h5 {
+      font-weight: 400;
+      color: $gray-color;
+      margin-top: 5px;
+    }
+  }
+
+  &-btns {
+    flex-direction: row;
+    margin-top: 1rem;
+
+    div {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: $white-color;
+
+      margin: 1rem;
+      transition: all 0.3s ease-in-out;
+
+      svg {
+        width: 20px;
+        height: 20px;
+        color: $secondary-color;
+      }
+
+      &:hover {
+        background-color: $secondary-color;
+
+        svg {
+          color: $white-color;
+        }
+      }
+    }
+  }
+
   &-brands {
     width: 80%;
     flex-wrap: wrap;
