--- a/frontend/src/constants/colors.scss
+++ b/frontend/src/constants/colors.scss
@@ -7,3 +7,5 @@ $brown-color: rgb(70, 54, 74);
 $white-color: rgb(255, 255, 255);
 $shadow-color: rgb(168, 168, 168);
 $blue-color: rgb(49, 59, 172);
+$white-color-02: rgb(254, 244, 245);
+$white-color-03: rgb(242, 247, 251);
